# cano.py

./: README.md  pyproject.toml
canopy/: __init__.py  console.py  parser.py  tree.py
canopy/tasklib/: __init__.py  cmd.py  request.py
examples/: workflow1.py
tests/: __init__.py  parallel_requests.json  test_parser.py
