[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cano.py"
version = "0.0.1"
description = "Cano.py is an async task execution scheduler based on behavior trees."
authors = [
  "Stian Lode <stian.lode@gmail.com>",
]
license = "MIT"
readme = "README.md"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
]
packages = [
  { include ="canopy" },
]


[tool.poetry.dependencies]
aiohttp = "^3.8.1"
python = "^3.7"
pydantic = "^1.8"
requests = "^2.25"
typing-extensions = "*"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
coverage = "^6.3.1"
mypy = "^0.942"
black = "^22.1.0"
pytest-black = "^0.3.12"
pytest-mypy = "^0.9.1"
flake8 = "^4.0.1"
pytest-flake8 = "^1.1.1"
types-requests = "^2.25"
pep8-naming = "^0.12.1"
flake8-docstrings = "^1.6.0"
requests-mock = "^1.9.3"
flake8-logging-format = "^0.6.0"

[tool.poetry.scripts]
cano = "canopy.console:main"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.pytest.ini_options]
addopts = [
  "--black",
  "--mypy",
  "--flake8",
  "--strict-markers",
  "--disable-pytest-warnings",
  "--asyncio-mode=auto",
]
python_files = ["test_*.py",]
testpaths = ["canopy", "tests"]
flake8-max-line-length = 100
flake8-max-doc-length = 100
flake8-ignore = [
  "E203",
  "D102",
  "D400",
  "D107",
  "D100",
  "D103"
]

[tool.mypy]
python_version = "3.9"
plugins = ["pydantic.mypy"]
pretty = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
show_traceback = true
show_error_codes = true
strict_optional = true
strict_equality = true
no_implicit_optional = true
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_no_return = true

[[tool.mypy.overrides]]
module = "tests.*"
warn_no_return = false

[tool.coverage.run]
branch = true
source = ["canopy", "tests"]
omit = ["examples"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 100
